// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StepIndicator > current=0: 첫 단계 active, 두번째 pending 1`] = `
<DocumentFragment>
  <ol
    aria-label="진행 단계"
    class="gap-s-2 mb-s-6 flex items-center"
    data-slot="step-indicator"
  >
    <li
      class="gap-s-2 flex items-center [&:not(:last-child)]:flex-1"
    >
      <div
        aria-current="step"
        class="gap-s-2 flex items-center"
      >
        <span
          aria-label="1단계 (진행 중)"
          class="text-caption flex h-[26px] w-[26px] items-center justify-center rounded-full border-[1.5px] font-bold transition-all duration-200 bg-accent border-accent text-foreground"
        >
          1
        </span>
        <span
          class="text-caption whitespace-nowrap text-foreground font-semibold"
        >
          기본 정보
        </span>
      </div>
      <span
        aria-hidden="true"
        class="relative h-0.5 flex-1 overflow-hidden rounded-sm bg-border"
      >
        <span
          class="absolute inset-y-0 left-0 rounded-sm transition-[width] duration-500 ease-in-out bg-accent w-0"
        />
      </span>
    </li>
    <li
      class="gap-s-2 flex items-center [&:not(:last-child)]:flex-1"
    >
      <div
        class="gap-s-2 flex items-center"
      >
        <span
          aria-label="2단계"
          class="text-caption flex h-[26px] w-[26px] items-center justify-center rounded-full border-[1.5px] font-bold transition-all duration-200 bg-card border-border text-foreground-muted"
        >
          2
        </span>
        <span
          class="text-caption whitespace-nowrap text-foreground-muted"
        >
          계정 설정
        </span>
      </div>
    </li>
  </ol>
</DocumentFragment>
`;

exports[`StepIndicator > current=1: 첫 단계 done(체크), 두번째 active 1`] = `
<DocumentFragment>
  <ol
    aria-label="진행 단계"
    class="gap-s-2 mb-s-6 flex items-center"
    data-slot="step-indicator"
  >
    <li
      class="gap-s-2 flex items-center [&:not(:last-child)]:flex-1"
    >
      <div
        class="gap-s-2 flex items-center"
      >
        <span
          aria-label="1단계 (완료)"
          class="text-caption flex h-[26px] w-[26px] items-center justify-center rounded-full border-[1.5px] font-bold transition-all duration-200 bg-accent-dim border-accent text-accent"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-check h-3.5 w-3.5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 6 9 17l-5-5"
            />
          </svg>
        </span>
        <span
          class="text-caption whitespace-nowrap text-foreground-muted"
        >
          기본 정보
        </span>
      </div>
      <span
        aria-hidden="true"
        class="relative h-0.5 flex-1 overflow-hidden rounded-sm bg-border"
      >
        <span
          class="absolute inset-y-0 left-0 rounded-sm transition-[width] duration-500 ease-in-out bg-accent w-full"
        />
      </span>
    </li>
    <li
      class="gap-s-2 flex items-center [&:not(:last-child)]:flex-1"
    >
      <div
        aria-current="step"
        class="gap-s-2 flex items-center"
      >
        <span
          aria-label="2단계 (진행 중)"
          class="text-caption flex h-[26px] w-[26px] items-center justify-center rounded-full border-[1.5px] font-bold transition-all duration-200 bg-accent border-accent text-foreground"
        >
          2
        </span>
        <span
          class="text-caption whitespace-nowrap text-foreground font-semibold"
        >
          계정 설정
        </span>
      </div>
    </li>
  </ol>
</DocumentFragment>
`;
